test_case/rust-lang_rust/23545_98477380.rs
 rust
let x = 1.;
let y = x.min(2.); // error: type `_` does not implement any method in scope named `min`
